testdata/golden/sema/invalid/generic_unbound_type_param.sg
// scenario: bare type parameter used without being declared
fn use_unknown(t: T) {}
